# fullstack

./: .env  README.md  docker-compose.yml  main.py  pyproject.toml
backend/: Dockerfile  Makefile  gunicorn.config.py  pyproject.toml
backend/backend/core/: settings.py
backend/backend/user/: admin.py  urls.py  views.py
backend/backend/utils/: jwt.py
backend/core/: urls.py
backend/user/: auth.py  forms.py  models.py  views.py
backend/user/middleware/: log_Request.py
backend/user/migrations/: 0001_initial.py  0002_requestlog.py  0003_alter_user_is_active.py
backend/utils/: jwt_authorize.py
frontend/: Dockerfile  Makefile  package.json  vite.config.js
frontend/src/: App.jsx  main.jsx
frontend/src/components/: CreatePost.jsx  Login.jsx  NavBar.jsx  NotFound.jsx  PostDetail.jsx  Posts.jsx  ProtectedRoute.jsx  Register_page.jsx
frontend/src/state/: authSlice.js  refreshToken.js
